# SlimeVR-Tracker-nRF-Receiver

./: .clangd  .gitignore  CMakeLists.txt  ECAN-ECBT-16B.md  Kconfig  prj.conf  sysbuild.cmake  west.yml
.github/workflows/: workflow.yml
boards/: data_collect.conf  data_collect.overlay  data_collect_cdc.conf  data_collect_cdc.overlay  ecan_cdc.overlay  nrf21540dk_nrf52840.conf  nrf52840dk_nrf52840.conf  nrf52840dongle_nrf52840.conf  receiver_hid.overlay  xiao_ble.conf
boards/aerorx/aerorx_r1/: Kconfig.aerorx_r1_uf2  aerorx_r1_uf2.dts  aerorx_r1_uf2.yaml  aerorx_r1_uf2_defconfig  board.yml
boards/etee/etee_dongle_uf2/: etee_dongle_uf2_defconfig
boards/foxapplication/foxdongle33_uf2/: Kconfig.foxdongle33_uf2  board.yml  foxdongle33_uf2.dts  foxdongle33_uf2.yaml  foxdongle33_uf2_defconfig
boards/foxapplication/foxdongle_npa_uf2/: Kconfig.foxdongle_npa_uf2  board.yml  foxdongle_npa_uf2.dts  foxdongle_npa_uf2.yaml  foxdongle_npa_uf2_defconfig
boards/foxapplication/foxdongle_uf2/: Kconfig.foxdongle_uf2  board.yml  foxdongle_uf2.dts  foxdongle_uf2.yaml  foxdongle_uf2_defconfig
boards/foxapplication/foxpromicro_rfek_uf2/: Kconfig.foxpromicro_rfek_uf2  board.yml  foxpromicro_rfek_uf2.dts  foxpromicro_rfek_uf2.yaml  foxpromicro_rfek_uf2_defconfig
boards/holyiot/holyiot_21017/: holyiot_21017.dts  holyiot_21017_defconfig
boards/hulimiao/nekonya/: Kconfig.nekonya_uf2  board.yml  nekonya_uf2.dts  nekonya_uf2.yaml  nekonya_uf2_defconfig
boards/kounolab/kounolab_dongle_uf2/: kounolab_dongle_uf2_defconfig
boards/nordic/promicro_uf2/: promicro_uf2.dts  promicro_uf2_defconfig
boards/slimevr/butterfly_p1/: butterfly_p1_uf2_defconfig
boards/styria/styria_p1/: Kconfig.styria_p1_uf2  board.yml  styria_p1_uf2.dts  styria_p1_uf2.yaml  styria_p1_uf2_defconfig
boards/styria/styria_r1/: Kconfig.styria_r1_uf2  board.yml  styria_r1_uf2.dts  styria_r1_uf2.yaml  styria_r1_uf2_defconfig
scripts/: data_collect.py  data_collect_cdc.py  data_collect_hid.py  esb_ota.py
src/: build_defines.h  console.c  console_cmd.c  console_cmd.h  data_collect.c  data_collect.h  data_collect_hid.c  ecan.c  ecan.h  esb_ota.c  esb_ota.h  globals.h  hid.c  hid.h  main.c  receiver_ota.c  receiver_ota.h  usb.c  usb.h  usb_build_info.c  usb_build_info.h  util.c  util.h
src/connection/: esb.c  esb.h  rssi_scan.c  rssi_scan.h
src/system/: led.c  led.h  status.c  status.h  system.c  system.h
